# extensible-data

./: Extensible.html  README.md  doc-index.html  doc-index.json  extensible-data.cabal  extensible-data.haddock  index.html
examples/: Example1.hs  Example1Base.hs
examples/basic/: Basic.hs  BasicBase.hs
examples/contexts/: Contexts.hs
examples/deriv/: Deriv.hs  DerivBase.hs
examples/generic/: Generic.hs
examples/lam/: DeBruijn.hs  Lam.hs  LamBase.hs  Typed.hs
examples/multifield/: MultiField.hs  MultiFieldBase.hs
examples/mutual/: Mutual.hs  MutualBase.hs
examples/param/: Param.hs  ParamBase.hs
examples/qualified/: Qualified.hs  QualifiedBase.hs
examples/record/: Record.hs  RecordBase.hs
examples/reused-name/: ReusedName.hs  ReusedNameBase.hs
examples/type-synonym/: TypeSynonym.hs  TypeSynonymBase.hs
src/: Extensible.hs  Extensible.html
test/: Rerename.hs  TestRerename.hs  tests.hs
