cabal-version: 2.2
name: extensible-data
version: 0.1.0
category: Data
synopsis: Generate the boilerplate for the Trees That Grow pattern
-- description: TODO
license: GPL-3.0-or-later

author: Andy Morris <andy@cryptium.ch>
maintainer: Andy Morris <andy@cryptium.ch>


flag build-examples
  description:
    Whether to build the examples (off by default so they don't get
    accidentally installed)
  default: False
  manual: True

flag dump-splices
  description: Show the results of splices in the examples
  default: True
  manual: True


common deps
  default-language: Haskell2010
  build-depends:
    base >= 4.12.0.0 && < 4.14,
    syb ^>= 0.7.1,
    template-haskell >= 2.14.0.0 && < 2.16
  ghc-options:
    -Wall

common example
  build-depends: extensible-data
  default-extensions: TemplateHaskell, TypeFamilies, PatternSynonyms
  ghc-options: -Wno-unused-top-binds -Wno-missing-pattern-synonym-signatures
  if flag(dump-splices)
    ghc-options: -ddump-splices
  if !flag(build-examples)
    buildable: False

library
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Extensible

executable basic
  import: deps, example
  hs-source-dirs: examples/basic
  main-is: Basic.hs
  other-modules: BasicBase

executable mutual
  import: deps, example
  hs-source-dirs: examples/mutual
  main-is: Mutual.hs
  other-modules: MutualBase
